src/bin/mpqc/parse.output
Terminals which are not used

   T_NOT
   T_OO_INPUT_KEYWORD


Grammar

    0 $accept: input $end

    1 input: assignments

    2 assignments: assignments assignment
    3            | /* empty */

    4 @1: /* empty */

    5 assignment: T_MOLECULE T_COLON @1 molecule
    6           | T_SYMMETRY T_COLON string
    7           | T_MULTIPLICITY T_COLON string
    8           | T_CHARGE T_COLON string
    9           | T_METHOD T_COLON string method_options_list
   10           | T_BASIS T_COLON string basis_options_list
   11           | T_AUXBASIS T_COLON string abasis_options_list
   12           | T_DFBASIS T_COLON string dbasis_options_list
   13           | T_OPTIMIZE T_COLON bool optimize_options_list
   14           | T_GRADIENT T_COLON bool
   15           | T_FREQUENCIES T_COLON bool
   16           | T_RESTART T_COLON bool
   17           | T_CHECKPOINT T_COLON bool
   18           | T_MEMORY T_COLON string
   19           | T_TMPSTORE T_COLON string
   20           | T_TMPDIR T_COLON string
   21           | T_ACCURACY T_COLON string
   22           | T_LINDEP T_COLON string
   23           | T_DOCC T_COLON nonnegative_int_vector
   24           | T_SOCC T_COLON nonnegative_int_vector
   25           | T_ALPHA T_COLON nonnegative_int_vector
   26           | T_BETA T_COLON nonnegative_int_vector
   27           | T_FROZEN_DOCC T_COLON nonnegative_int_vector
   28           | T_FROZEN_UOCC T_COLON nonnegative_int_vector
   29           | T_PCCSD T_COLON string string string
   30           | T_SCF T_COLON scf_options_list
   31           | T_DEBUG T_COLON string

   32 nonnegative_int_vector: string
   33                       | T_BEG_OPT nonnegative_int_sequence T_END_OPT

   34 nonnegative_int_sequence: nonnegative_int_sequence string
   35                         | /* empty */

   36 optimize_options_list: T_BEG_OPT optimize_options T_END_OPT
   37                      | /* empty */

   38 optimize_options: optimize_options optimize_option
   39                 | /* empty */

   40 optimize_option: T_CARTESIAN
   41                | T_INTERNAL
   42                | T_REDUNDANT

   43 molecule: molecule_options_list atoms

   44 atoms: atoms atom
   45      | /* empty */

   46 atom: string string string string atom_options_list

   47 atom_options_list: T_BEG_OPT atom_options T_END_OPT
   48                  | /* empty */

   49 atom_options: atom_options atom_option
   50             | /* empty */

   51 atom_option: T_CHARGE T_EQUALS string

   52 molecule_options_list: T_BEG_OPT molecule_options T_END_OPT
   53                      | /* empty */

   54 molecule_options: molecule_options molecule_option
   55                 | /* empty */

   56 molecule_option: T_BOHR
   57                | T_ANGSTROM

   58 method_options_list: T_BEG_OPT method_options T_END_OPT
   59                    | /* empty */

   60 method_options: method_options method_option
   61               | /* empty */

   62 method_option: T_XC T_EQUALS string
   63              | T_GRID T_EQUALS string
   64              | T_F12 T_EQUALS string
   65              | T_APP T_EQUALS string
   66              | T_RI T_EQUALS string
   67              | T_ANSATZ T_EQUALS string

   68 basis_options_list: T_BEG_OPT basis_options T_END_OPT
   69                   | /* empty */

   70 basis_options: basis_options basis_option
   71              | /* empty */

   72 basis_option: T_UC

   73 abasis_options_list: T_BEG_OPT abasis_options T_END_OPT
   74                    | /* empty */

   75 abasis_options: abasis_options abasis_option
   76               | /* empty */

   77 abasis_option: T_UC

   78 dbasis_options_list: T_BEG_OPT dbasis_options T_END_OPT
   79                    | /* empty */

   80 dbasis_options: dbasis_options dbasis_option
   81               | /* empty */

   82 dbasis_option: T_UC

   83 scf_options_list: T_BEG_OPT scf_options T_END_OPT
   84                 | /* empty */

   85 scf_options: scf_options scf_option
   86            | /* empty */

   87 scf_option: T_MAXITER T_EQUALS string

   88 string: T_STRING

   89 bool: T_BOOL


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NOT (258)
T_MOLECULE (259) 5
T_MULTIPLICITY (260) 7
T_CHARGE (261) 8 51
T_METHOD (262) 9
T_BASIS (263) 10
T_AUXBASIS (264) 11
T_DFBASIS (265) 12
T_EQUALS (266) 51 62 63 64 65 66 67 87
T_OPTIMIZE (267) 13
T_GRADIENT (268) 14
T_BEG_OPT (269) 33 36 47 52 58 68 73 78 83
T_END_OPT (270) 33 36 47 52 58 68 73 78 83
T_CARTESIAN (271) 40
T_INTERNAL (272) 41
T_REDUNDANT (273) 42
T_RESTART (274) 16
T_CHECKPOINT (275) 17
T_COLON (276) 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29 30 31
T_SYMMETRY (277) 6
T_MEMORY (278) 18
T_TMPDIR (279) 20
T_TMPSTORE (280) 19
T_DEBUG (281) 31
T_ACCURACY (282) 21
T_BOHR (283) 56
T_ANGSTROM (284) 57
T_FREQUENCIES (285) 15
T_LINDEP (286) 22
T_MAXITER (287) 87
T_SCF (288) 30
T_UC (289) 72 77 82
T_DOCC (290) 23
T_SOCC (291) 24
T_FROZEN_DOCC (292) 27
T_FROZEN_UOCC (293) 28
T_ALPHA (294) 25
T_BETA (295) 26
T_PCCSD (296) 29
T_XC (297) 62
T_GRID (298) 63
T_RI (299) 66
T_F12 (300) 64
T_APP (301) 65
T_ANSATZ (302) 67
T_OO_INPUT_KEYWORD (303)
T_STRING (304) 88
T_BOOL (305) 89


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
input (52)
    on left: 1, on right: 0
assignments (53)
    on left: 2 3, on right: 1 2
assignment (54)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29 30 31, on right: 2
@1 (55)
    on left: 4, on right: 5
nonnegative_int_vector (56)
    on left: 32 33, on right: 23 24 25 26 27 28
nonnegative_int_sequence (57)
    on left: 34 35, on right: 33 34
optimize_options_list (58)
    on left: 36 37, on right: 13
optimize_options (59)
    on left: 38 39, on right: 36 38
optimize_option (60)
    on left: 40 41 42, on right: 38
molecule (61)
    on left: 43, on right: 5
atoms (62)
    on left: 44 45, on right: 43 44
atom (63)
    on left: 46, on right: 44
atom_options_list (64)
    on left: 47 48, on right: 46
atom_options (65)
    on left: 49 50, on right: 47 49
atom_option (66)
    on left: 51, on right: 49
molecule_options_list (67)
    on left: 52 53, on right: 43
molecule_options (68)
    on left: 54 55, on right: 52 54
molecule_option (69)
    on left: 56 57, on right: 54
method_options_list (70)
    on left: 58 59, on right: 9
method_options (71)
    on left: 60 61, on right: 58 60
method_option (72)
    on left: 62 63 64 65 66 67, on right: 60
basis_options_list (73)
    on left: 68 69, on right: 10
basis_options (74)
    on left: 70 71, on right: 68 70
basis_option (75)
    on left: 72, on right: 70
abasis_options_list (76)
    on left: 73 74, on right: 11
abasis_options (77)
    on left: 75 76, on right: 73 75
abasis_option (78)
    on left: 77, on right: 75
dbasis_options_list (79)
    on left: 78 79, on right: 12
dbasis_options (80)
    on left: 80 81, on right: 78 80
dbasis_option (81)
    on left: 82, on right: 80
scf_options_list (82)
    on left: 83 84, on right: 30
scf_options (83)
    on left: 85 86, on right: 83 85
scf_option (84)
    on left: 87, on right: 85
string (85)
    on left: 88, on right: 6 7 8 9 10 11 12 18 19 20 21 22 29 31 32
    34 46 51 62 63 64 65 66 67 87
bool (86)
    on left: 89, on right: 13 14 15 16 17


state 0

    0 $accept: . input $end

    $default  reduce using rule 3 (assignments)

    input        go to state 1
    assignments  go to state 2


state 1

    0 $accept: input . $end

    $end  shift, and go to state 3


state 2

    1 input: assignments .
    2 assignments: assignments . assignment

    T_MOLECULE      shift, and go to state 4
    T_MULTIPLICITY  shift, and go to state 5
    T_CHARGE        shift, and go to state 6
    T_METHOD        shift, and go to state 7
    T_BASIS         shift, and go to state 8
    T_AUXBASIS      shift, and go to state 9
    T_DFBASIS       shift, and go to state 10
    T_OPTIMIZE      shift, and go to state 11
    T_GRADIENT      shift, and go to state 12
    T_RESTART       shift, and go to state 13
    T_CHECKPOINT    shift, and go to state 14
    T_SYMMETRY      shift, and go to state 15
    T_MEMORY        shift, and go to state 16
    T_TMPDIR        shift, and go to state 17
    T_TMPSTORE      shift, and go to state 18
    T_DEBUG         shift, and go to state 19
    T_ACCURACY      shift, and go to state 20
    T_FREQUENCIES   shift, and go to state 21
    T_LINDEP        shift, and go to state 22
    T_SCF           shift, and go to state 23
    T_DOCC          shift, and go to state 24
    T_SOCC          shift, and go to state 25
    T_FROZEN_DOCC   shift, and go to state 26
    T_FROZEN_UOCC   shift, and go to state 27
    T_ALPHA         shift, and go to state 28
    T_BETA          shift, and go to state 29
    T_PCCSD         shift, and go to state 30

    $default  reduce using rule 1 (input)

    assignment  go to state 31


state 3

    0 $accept: input $end .

    $default  accept


state 4

    5 assignment: T_MOLECULE . T_COLON @1 molecule

    T_COLON  shift, and go to state 32


state 5

    7 assignment: T_MULTIPLICITY . T_COLON string

    T_COLON  shift, and go to state 33


state 6

    8 assignment: T_CHARGE . T_COLON string

    T_COLON  shift, and go to state 34


state 7

    9 assignment: T_METHOD . T_COLON string method_options_list

    T_COLON  shift, and go to state 35


state 8

   10 assignment: T_BASIS . T_COLON string basis_options_list

    T_COLON  shift, and go to state 36


state 9

   11 assignment: T_AUXBASIS . T_COLON string abasis_options_list

    T_COLON  shift, and go to state 37


state 10

   12 assignment: T_DFBASIS . T_COLON string dbasis_options_list

    T_COLON  shift, and go to state 38


state 11

   13 assignment: T_OPTIMIZE . T_COLON bool optimize_options_list

    T_COLON  shift, and go to state 39


state 12

   14 assignment: T_GRADIENT . T_COLON bool

    T_COLON  shift, and go to state 40


state 13

   16 assignment: T_RESTART . T_COLON bool

    T_COLON  shift, and go to state 41


state 14

   17 assignment: T_CHECKPOINT . T_COLON bool

    T_COLON  shift, and go to state 42


state 15

    6 assignment: T_SYMMETRY . T_COLON string

    T_COLON  shift, and go to state 43


state 16

   18 assignment: T_MEMORY . T_COLON string

    T_COLON  shift, and go to state 44


state 17

   20 assignment: T_TMPDIR . T_COLON string

    T_COLON  shift, and go to state 45


state 18

   19 assignment: T_TMPSTORE . T_COLON string

    T_COLON  shift, and go to state 46


state 19

   31 assignment: T_DEBUG . T_COLON string

    T_COLON  shift, and go to state 47


state 20

   21 assignment: T_ACCURACY . T_COLON string

    T_COLON  shift, and go to state 48


state 21

   15 assignment: T_FREQUENCIES . T_COLON bool

    T_COLON  shift, and go to state 49


state 22

   22 assignment: T_LINDEP . T_COLON string

    T_COLON  shift, and go to state 50


state 23

   30 assignment: T_SCF . T_COLON scf_options_list

    T_COLON  shift, and go to state 51


state 24

   23 assignment: T_DOCC . T_COLON nonnegative_int_vector

    T_COLON  shift, and go to state 52


state 25

   24 assignment: T_SOCC . T_COLON nonnegative_int_vector

    T_COLON  shift, and go to state 53


state 26

   27 assignment: T_FROZEN_DOCC . T_COLON nonnegative_int_vector

    T_COLON  shift, and go to state 54


state 27

   28 assignment: T_FROZEN_UOCC . T_COLON nonnegative_int_vector

    T_COLON  shift, and go to state 55


state 28

   25 assignment: T_ALPHA . T_COLON nonnegative_int_vector

    T_COLON  shift, and go to state 56


state 29

   26 assignment: T_BETA . T_COLON nonnegative_int_vector

    T_COLON  shift, and go to state 57


state 30

   29 assignment: T_PCCSD . T_COLON string string string

    T_COLON  shift, and go to state 58


state 31

    2 assignments: assignments assignment .

    $default  reduce using rule 2 (assignments)


state 32

    5 assignment: T_MOLECULE T_COLON . @1 molecule

    $default  reduce using rule 4 (@1)

    @1  go to state 59


state 33

    7 assignment: T_MULTIPLICITY T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 61


state 34

    8 assignment: T_CHARGE T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 62


state 35

    9 assignment: T_METHOD T_COLON . string method_options_list

    T_STRING  shift, and go to state 60

    string  go to state 63


state 36

   10 assignment: T_BASIS T_COLON . string basis_options_list

    T_STRING  shift, and go to state 60

    string  go to state 64


state 37

   11 assignment: T_AUXBASIS T_COLON . string abasis_options_list

    T_STRING  shift, and go to state 60

    string  go to state 65


state 38

   12 assignment: T_DFBASIS T_COLON . string dbasis_options_list

    T_STRING  shift, and go to state 60

    string  go to state 66


state 39

   13 assignment: T_OPTIMIZE T_COLON . bool optimize_options_list

    T_BOOL  shift, and go to state 67

    bool  go to state 68


state 40

   14 assignment: T_GRADIENT T_COLON . bool

    T_BOOL  shift, and go to state 67

    bool  go to state 69


state 41

   16 assignment: T_RESTART T_COLON . bool

    T_BOOL  shift, and go to state 67

    bool  go to state 70


state 42

   17 assignment: T_CHECKPOINT T_COLON . bool

    T_BOOL  shift, and go to state 67

    bool  go to state 71


state 43

    6 assignment: T_SYMMETRY T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 72


state 44

   18 assignment: T_MEMORY T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 73


state 45

   20 assignment: T_TMPDIR T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 74


state 46

   19 assignment: T_TMPSTORE T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 75


state 47

   31 assignment: T_DEBUG T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 76


state 48

   21 assignment: T_ACCURACY T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 77


state 49

   15 assignment: T_FREQUENCIES T_COLON . bool

    T_BOOL  shift, and go to state 67

    bool  go to state 78


state 50

   22 assignment: T_LINDEP T_COLON . string

    T_STRING  shift, and go to state 60

    string  go to state 79


state 51

   30 assignment: T_SCF T_COLON . scf_options_list

    T_BEG_OPT  shift, and go to state 80

    $default  reduce using rule 84 (scf_options_list)

    scf_options_list  go to state 81


state 52

   23 assignment: T_DOCC T_COLON . nonnegative_int_vector

    T_BEG_OPT  shift, and go to state 82
    T_STRING   shift, and go to state 60

    nonnegative_int_vector  go to state 83
    string                  go to state 84


state 53

   24 assignment: T_SOCC T_COLON . nonnegative_int_vector

    T_BEG_OPT  shift, and go to state 82
    T_STRING   shift, and go to state 60

    nonnegative_int_vector  go to state 85
    string                  go to state 84


state 54

   27 assignment: T_FROZEN_DOCC T_COLON . nonnegative_int_vector

    T_BEG_OPT  shift, and go to state 82
    T_STRING   shift, and go to state 60

    nonnegative_int_vector  go to state 86
    string                  go to state 84


state 55

   28 assignment: T_FROZEN_UOCC T_COLON . nonnegative_int_vector

    T_BEG_OPT  shift, and go to state 82
    T_STRING   shift, and go to state 60

    nonnegative_int_vector  go to state 87
    string                  go to state 84


state 56

   25 assignment: T_ALPHA T_COLON . nonnegative_int_vector

    T_BEG_OPT  shift, and go to state 82
    T_STRING   shift, and go to state 60

    nonnegative_int_vector  go to state 88
    string                  go to state 84


state 57

   26 assignment: T_BETA T_COLON . nonnegative_int_vector

    T_BEG_OPT  shift, and go to state 82
    T_STRING   shift, and go to state 60

    nonnegative_int_vector  go to state 89
    string                  go to state 84


state 58

   29 assignment: T_PCCSD T_COLON . string string string

    T_STRING  shift, and go to state 60

    string  go to state 90


state 59

    5 assignment: T_MOLECULE T_COLON @1 . molecule

    T_BEG_OPT  shift, and go to state 91

    $default  reduce using rule 53 (molecule_options_list)

    molecule               go to state 92
    molecule_options_list  go to state 93


state 60

   88 string: T_STRING .

    $default  reduce using rule 88 (string)


state 61

    7 assignment: T_MULTIPLICITY T_COLON string .

    $default  reduce using rule 7 (assignment)


state 62

    8 assignment: T_CHARGE T_COLON string .

    $default  reduce using rule 8 (assignment)


state 63

    9 assignment: T_METHOD T_COLON string . method_options_list

    T_BEG_OPT  shift, and go to state 94

    $default  reduce using rule 59 (method_options_list)

    method_options_list  go to state 95


state 64

   10 assignment: T_BASIS T_COLON string . basis_options_list

    T_BEG_OPT  shift, and go to state 96

    $default  reduce using rule 69 (basis_options_list)

    basis_options_list  go to state 97


state 65

   11 assignment: T_AUXBASIS T_COLON string . abasis_options_list

    T_BEG_OPT  shift, and go to state 98

    $default  reduce using rule 74 (abasis_options_list)

    abasis_options_list  go to state 99


state 66

   12 assignment: T_DFBASIS T_COLON string . dbasis_options_list

    T_BEG_OPT  shift, and go to state 100

    $default  reduce using rule 79 (dbasis_options_list)

    dbasis_options_list  go to state 101


state 67

   89 bool: T_BOOL .

    $default  reduce using rule 89 (bool)


state 68

   13 assignment: T_OPTIMIZE T_COLON bool . optimize_options_list

    T_BEG_OPT  shift, and go to state 102

    $default  reduce using rule 37 (optimize_options_list)

    optimize_options_list  go to state 103


state 69

   14 assignment: T_GRADIENT T_COLON bool .

    $default  reduce using rule 14 (assignment)


state 70

   16 assignment: T_RESTART T_COLON bool .

    $default  reduce using rule 16 (assignment)


state 71

   17 assignment: T_CHECKPOINT T_COLON bool .

    $default  reduce using rule 17 (assignment)


state 72

    6 assignment: T_SYMMETRY T_COLON string .

    $default  reduce using rule 6 (assignment)


state 73

   18 assignment: T_MEMORY T_COLON string .

    $default  reduce using rule 18 (assignment)


state 74

   20 assignment: T_TMPDIR T_COLON string .

    $default  reduce using rule 20 (assignment)


state 75

   19 assignment: T_TMPSTORE T_COLON string .

    $default  reduce using rule 19 (assignment)


state 76

   31 assignment: T_DEBUG T_COLON string .

    $default  reduce using rule 31 (assignment)


state 77

   21 assignment: T_ACCURACY T_COLON string .

    $default  reduce using rule 21 (assignment)


state 78

   15 assignment: T_FREQUENCIES T_COLON bool .

    $default  reduce using rule 15 (assignment)


state 79

   22 assignment: T_LINDEP T_COLON string .

    $default  reduce using rule 22 (assignment)


state 80

   83 scf_options_list: T_BEG_OPT . scf_options T_END_OPT

    $default  reduce using rule 86 (scf_options)

    scf_options  go to state 104


state 81

   30 assignment: T_SCF T_COLON scf_options_list .

    $default  reduce using rule 30 (assignment)


state 82

   33 nonnegative_int_vector: T_BEG_OPT . nonnegative_int_sequence T_END_OPT

    $default  reduce using rule 35 (nonnegative_int_sequence)

    nonnegative_int_sequence  go to state 105


state 83

   23 assignment: T_DOCC T_COLON nonnegative_int_vector .

    $default  reduce using rule 23 (assignment)


state 84

   32 nonnegative_int_vector: string .

    $default  reduce using rule 32 (nonnegative_int_vector)


state 85

   24 assignment: T_SOCC T_COLON nonnegative_int_vector .

    $default  reduce using rule 24 (assignment)


state 86

   27 assignment: T_FROZEN_DOCC T_COLON nonnegative_int_vector .

    $default  reduce using rule 27 (assignment)


state 87

   28 assignment: T_FROZEN_UOCC T_COLON nonnegative_int_vector .

    $default  reduce using rule 28 (assignment)


state 88

   25 assignment: T_ALPHA T_COLON nonnegative_int_vector .

    $default  reduce using rule 25 (assignment)


state 89

   26 assignment: T_BETA T_COLON nonnegative_int_vector .

    $default  reduce using rule 26 (assignment)


state 90

   29 assignment: T_PCCSD T_COLON string . string string

    T_STRING  shift, and go to state 60

    string  go to state 106


state 91

   52 molecule_options_list: T_BEG_OPT . molecule_options T_END_OPT

    $default  reduce using rule 55 (molecule_options)

    molecule_options  go to state 107


state 92

    5 assignment: T_MOLECULE T_COLON @1 molecule .

    $default  reduce using rule 5 (assignment)


state 93

   43 molecule: molecule_options_list . atoms

    $default  reduce using rule 45 (atoms)

    atoms  go to state 108


state 94

   58 method_options_list: T_BEG_OPT . method_options T_END_OPT

    $default  reduce using rule 61 (method_options)

    method_options  go to state 109


state 95

    9 assignment: T_METHOD T_COLON string method_options_list .

    $default  reduce using rule 9 (assignment)


state 96

   68 basis_options_list: T_BEG_OPT . basis_options T_END_OPT

    $default  reduce using rule 71 (basis_options)

    basis_options  go to state 110


state 97

   10 assignment: T_BASIS T_COLON string basis_options_list .

    $default  reduce using rule 10 (assignment)


state 98

   73 abasis_options_list: T_BEG_OPT . abasis_options T_END_OPT

    $default  reduce using rule 76 (abasis_options)

    abasis_options  go to state 111


state 99

   11 assignment: T_AUXBASIS T_COLON string abasis_options_list .

    $default  reduce using rule 11 (assignment)


state 100

   78 dbasis_options_list: T_BEG_OPT . dbasis_options T_END_OPT

    $default  reduce using rule 81 (dbasis_options)

    dbasis_options  go to state 112


state 101

   12 assignment: T_DFBASIS T_COLON string dbasis_options_list .

    $default  reduce using rule 12 (assignment)


state 102

   36 optimize_options_list: T_BEG_OPT . optimize_options T_END_OPT

    $default  reduce using rule 39 (optimize_options)

    optimize_options  go to state 113


state 103

   13 assignment: T_OPTIMIZE T_COLON bool optimize_options_list .

    $default  reduce using rule 13 (assignment)


state 104

   83 scf_options_list: T_BEG_OPT scf_options . T_END_OPT
   85 scf_options: scf_options . scf_option

    T_END_OPT  shift, and go to state 114
    T_MAXITER  shift, and go to state 115

    scf_option  go to state 116


state 105

   33 nonnegative_int_vector: T_BEG_OPT nonnegative_int_sequence . T_END_OPT
   34 nonnegative_int_sequence: nonnegative_int_sequence . string

    T_END_OPT  shift, and go to state 117
    T_STRING   shift, and go to state 60

    string  go to state 118


state 106

   29 assignment: T_PCCSD T_COLON string string . string

    T_STRING  shift, and go to state 60

    string  go to state 119


state 107

   52 molecule_options_list: T_BEG_OPT molecule_options . T_END_OPT
   54 molecule_options: molecule_options . molecule_option

    T_END_OPT   shift, and go to state 120
    T_BOHR      shift, and go to state 121
    T_ANGSTROM  shift, and go to state 122

    molecule_option  go to state 123


state 108

   43 molecule: molecule_options_list atoms .
   44 atoms: atoms . atom

    T_STRING  shift, and go to state 60

    $default  reduce using rule 43 (molecule)

    atom    go to state 124
    string  go to state 125


state 109

   58 method_options_list: T_BEG_OPT method_options . T_END_OPT
   60 method_options: method_options . method_option

    T_END_OPT  shift, and go to state 126
    T_XC       shift, and go to state 127
    T_GRID     shift, and go to state 128
    T_RI       shift, and go to state 129
    T_F12      shift, and go to state 130
    T_APP      shift, and go to state 131
    T_ANSATZ   shift, and go to state 132

    method_option  go to state 133


state 110

   68 basis_options_list: T_BEG_OPT basis_options . T_END_OPT
   70 basis_options: basis_options . basis_option

    T_END_OPT  shift, and go to state 134
    T_UC       shift, and go to state 135

    basis_option  go to state 136


state 111

   73 abasis_options_list: T_BEG_OPT abasis_options . T_END_OPT
   75 abasis_options: abasis_options . abasis_option

    T_END_OPT  shift, and go to state 137
    T_UC       shift, and go to state 138

    abasis_option  go to state 139


state 112

   78 dbasis_options_list: T_BEG_OPT dbasis_options . T_END_OPT
   80 dbasis_options: dbasis_options . dbasis_option

    T_END_OPT  shift, and go to state 140
    T_UC       shift, and go to state 141

    dbasis_option  go to state 142


state 113

   36 optimize_options_list: T_BEG_OPT optimize_options . T_END_OPT
   38 optimize_options: optimize_options . optimize_option

    T_END_OPT    shift, and go to state 143
    T_CARTESIAN  shift, and go to state 144
    T_INTERNAL   shift, and go to state 145
    T_REDUNDANT  shift, and go to state 146

    optimize_option  go to state 147


state 114

   83 scf_options_list: T_BEG_OPT scf_options T_END_OPT .

    $default  reduce using rule 83 (scf_options_list)


state 115

   87 scf_option: T_MAXITER . T_EQUALS string

    T_EQUALS  shift, and go to state 148


state 116

   85 scf_options: scf_options scf_option .

    $default  reduce using rule 85 (scf_options)


state 117

   33 nonnegative_int_vector: T_BEG_OPT nonnegative_int_sequence T_END_OPT .

    $default  reduce using rule 33 (nonnegative_int_vector)


state 118

   34 nonnegative_int_sequence: nonnegative_int_sequence string .

    $default  reduce using rule 34 (nonnegative_int_sequence)


state 119

   29 assignment: T_PCCSD T_COLON string string string .

    $default  reduce using rule 29 (assignment)


state 120

   52 molecule_options_list: T_BEG_OPT molecule_options T_END_OPT .

    $default  reduce using rule 52 (molecule_options_list)


state 121

   56 molecule_option: T_BOHR .

    $default  reduce using rule 56 (molecule_option)


state 122

   57 molecule_option: T_ANGSTROM .

    $default  reduce using rule 57 (molecule_option)


state 123

   54 molecule_options: molecule_options molecule_option .

    $default  reduce using rule 54 (molecule_options)


state 124

   44 atoms: atoms atom .

    $default  reduce using rule 44 (atoms)


state 125

   46 atom: string . string string string atom_options_list

    T_STRING  shift, and go to state 60
